--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         const testDiv = document.getElementById('testDiv');
         const shakeThreshold = 20; // Valor ajustado para ser mais sensível
 
-        // Event listener real para capturar o evento devicemotion
-        window.addEventListener('devicemotion', (event) => {
+        function handleMotionEvent(event) {
             const { x, y, z } = event.accelerationIncludingGravity;
             const acceleration = Math.sqrt(x * x + y * y + z * z);
 
@@ -37,10 +36,28 @@
                 testDiv.style.backgroundColor = 'red';
                 console.log('Ah, deu certo');
             }
-        });
+        }
+
+        function requestPermission() {
+            if (typeof DeviceMotionEvent.requestPermission === 'function') {
+                DeviceMotionEvent.requestPermission()
+                    .then(permissionState => {
+                        if (permissionState === 'granted') {
+                            window.addEventListener('devicemotion', handleMotionEvent);
+                        } else {
+                            console.log('Permissão para acessar os sensores de movimento foi negada.');
+                        }
+                    })
+                    .catch(console.error);
+            } else {
+                // No iOS mais antigo ou outros dispositivos que não exigem permissão
+                window.addEventListener('devicemotion', handleMotionEvent);
+            }
+        }
 
         window.addEventListener('DOMContentLoaded', (event) => {
             console.log('DOM fully loaded and parsed');
+            requestPermission();
         });
     </script>
 </body>
